# Omikron

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/anonymous_clients/: anonymous_client_connection.rs  anonymous_manager.rs  mod.rs
src/auth/: auth_connector.rs  crypto_helper.rs  mod.rs
src/calls/: call_connection.rs  call_group.rs  call_manager.rs  call_util.rs  caller.rs  mod.rs
src/data/: communication.rs  mod.rs  user.rs
src/omega/: mod.rs  omega_connection.rs  ping_pong_task.rs
src/rho/: client_connection.rs  connection.rs  iota_connection.rs  mod.rs  rho_connection.rs  rho_manager.rs  server.rs
src/util/: config_util.rs  crypto_helper.rs  crypto_util.rs  file_util.rs  logger.rs  mod.rs  print.rs
