[package]
name = "Omikron"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"] }
tokio-tungstenite = { version = "*" }
tokio-util = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
futures-util = "*"
http = "*"
tungstenite = "*"
tokio_websocket_server = "0.1.0"
tracing = "*"
tracing-subscriber = "*"
uuid = "*"
axum = "*"
json = "*"
reqwest = "*"
hex = "*"
rustls = { version = "*", default-features = false, features = ["ring"] }
cmake = "*"
walkdir = "2.5.0"
sysinfo = "0.30"
serde = { version = "1.0.219", features = ["derive"] }
bytes = "*"
crossterm = "*"
sys-info = "*"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom", "std"] }
base64 = "0.22.1"
once_cell = "1.21.3"
x448 = { version = "*" }
x509 = "*"
sha2 = "*"
der = "*"
pkcs8 = { version = "*", features = ["alloc"] }
futures = "*"
dashmap = "*"
warp = { version = "*" }
chrono = "*"
tokio-stream = "*"
loom = "0.7.2"
