[package]
name = "Omikron"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "*"
async-tungstenite = { version = "0.32.0", features = ["futures-03-sink", "futures-util", "handshake", "__rustls-tls", "async-native-tls", "async-std", "async-std-runtime", "async-tls", "gio", "gio-runtime", "glib", "openssl", "real-async-native-tls", "real-async-tls", "real-native-tls", "real-tokio-native-tls", "real-tokio-openssl", "real-tokio-rustls", "rustls-native-certs", "rustls-pki-types", "tokio", "tokio-native-tls", "tokio-openssl", "tokio-runtime", "tokio-rustls-manual-roots", "tokio-rustls-native-certs", "tokio-rustls-webpki-roots", "url", "verbose-logging", "webpki-roots"] }
axum = "*"
base64 = "0.22.1"
bytes = "*"
chrono = "*"
cmake = "*"
crossterm = "*"
dashmap = "*"
der = "*"
futures = "*"
futures-util = "*"
hex = "*"
http = "*"
hyper = { version = "1.8.1", features = ["full"] }
json = "*"
loom = "0.7.2"
once_cell = "1.21.3"
pkcs8 = { version = "*", features = ["alloc"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom", "std"] }
reqwest = "*"
rustls = { version = "*", default-features = false, features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "*"
sys-info = "*"
sysinfo = "0.30"
tokio = { version = "*", features = ["full"] }
tokio-rustls = { version = "*" }
tokio-stream = "*"
tokio-util = { version = "*", features = ["full"] }
tokio_websocket_server = "0.1.0"
tower = "0.5.2"
tracing = "*"
tracing-subscriber = "*"
tungstenite = "*"
uuid = "*"
walkdir = "2.5.0"
warp = "*"
x448 = { version = "*" }
x509 = "*"
log = "0.4"
livekit = "0.7.25"
livekit-api = "0.4.10"
dotenv = "0.15.0"
aes-gcm = "0.10.3"
tokio-native-tls = "0.3.1"
